--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "download": "^8.0.0",
     "extract-zip": "^2.0.1",
     "tar-to-zip": "^3.0.0"
