--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "An Electron GUI for nebula vpn",
   "main": "main.js",
   "scripts": {
-    "start": "./node_modules/.bin/electron ."
+    "start": "./node_modules/.bin/electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "repository": "https://github.com/XDGFX/nebula-gui",
   "keywords": [
@@ -15,13 +18,46 @@
   ],
   "author": "XDGFX",
   "license": "GPL-3.0-or-later",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "nebula-gui"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "electron": "^16.0.4",
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
     "animejs": "^3.2.1",
     "download": "^8.0.0",
-    "electron": "^16.0.4",
+    "electron-squirrel-startup": "^1.0.0",
     "extract-zip": "^2.0.1",
     "tar-to-zip": "^3.0.0"
   }
